--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.5.0</version> <!-- Use the latest version -->
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.openjfx</groupId>
